Fixes some styling issues on mobile

--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -385,7 +385,7 @@ a{
 }
 
 .main{
-  margin: 150px auto;
+  margin: 10% auto;
 }
 
 .ingredient-list{
